--- a/common/build.gradle
+++ b/common/build.gradle
@@ -19,11 +19,9 @@ dependencies {
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     modImplementation "dev.architectury:architectury:$rootProject.architectury_api_version"
 
-    compileOnly("maven.modrinth:midnightlib:${project.midnightlib_version_fabric}")
-    compileOnly("maven.modrinth:moonlight:${project.moonlight_lib_fabric}")
-    compileOnly("maven.modrinth:every-compat:${project.every_compat_fabric}")
-
-    modCompileOnly("com.simibubi.create:create-fabric-$minecraft_version:$create_fabric_version")
+    modCompileOnly("maven.modrinth:midnightlib:${project.midnightlib_version_fabric}")
+    modCompileOnly("maven.modrinth:moonlight:${project.moonlight_lib_fabric}")
+    modCompileOnly("maven.modrinth:every-compat:${project.every_compat_fabric}")
 }
 
 sourceSets {
