--- a/gradle.properties
+++ b/gradle.properties
@@ -6,31 +6,25 @@ org.gradle.parallel=true
 mod_version = 1.0.0
 maven_group = com.starfish_studios
 archives_name = bbb
-enabled_platforms = fabric,forge
+enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.20.1
+minecraft_version = 1.21.1
 
 # Dependencies
-architectury_api_version = 9.2.14
+architectury_api_version = 13.0.8
 fabric_loader_version = 0.16.10
-fabric_api_version = 0.92.4+1.20.1
-forge_version = 1.20.1-47.3.12
+fabric_api_version = 0.115.3+1.21.1
+neoforge_version = 21.1.84
 
-moonlight_lib_fabric=fabric_1.20-2.13.78
+moonlight_lib_fabric=fabric_1.21-2.17.37
 
-fabric_registrate_version = 1.3.62-MC1.20.1
-fabric_flywheel_version = 0.6.9-1
-create_fabric_version = 0.5.1-j-build.1631+mc1.20.1
-midnightlib_version_fabric = 1.4.1-fabric
-mod_menu_version=7.2.2
-every_compat_fabric=1.20-2.7.23
 
-moonlight_lib_forge=forge_1.20-2.13.78
+midnightlib_version_fabric = 1.6.9+1.21-fabric
+mod_menu_version=11.0.3
+every_compat_fabric=fabric_1.21-2.9.6
 
-midnightlib_version_forge = 1.4.2-forge
-create_forge_version = 0.5.1.j-55
-registrate_forge_version = MC1.20-1.3.3
-flywheel_forge_minecraft_version = 1.20.1
-flywheel_forge_version = 0.6.11-13
-every_compat_forge=1.20-2.7.23
+moonlight_lib_forge=neoforge_1.21-2.17.23
+
+midnightlib_version_forge = 1.6.9+1.21-neoforge
+every_compat_forge=neoforge_1.21-2.9.6
