--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,7 +7,10 @@ loom {
 }
 
 repositories {
-
+    maven {
+        name = "ModMaven"
+        url  = uri("https://modmaven.dev/")
+    }
 }
 
 dependencies {
