--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.0.0
+mod_version = 2.0pre2
 maven_group = com.starfish_studios
 archives_name = bbb
 enabled_platforms = fabric,forge
@@ -20,7 +20,6 @@ forge_version = 1.20.1-47.3.12
 moonlight_lib_fabric=fabric_1.20-2.13.78
 
 fabric_registrate_version = 1.3.62-MC1.20.1
-fabric_flywheel_version = 0.6.9-1
 create_fabric_version = 0.5.1-j-build.1631+mc1.20.1
 midnightlib_version_fabric = 1.4.1-fabric
 mod_menu_version=7.2.2
@@ -31,6 +30,5 @@ moonlight_lib_forge=forge_1.20-2.13.78
 midnightlib_version_forge = 1.4.2-forge
 create_forge_version = 0.5.1.j-55
 registrate_forge_version = MC1.20-1.3.3
-flywheel_forge_minecraft_version = 1.20.1
 flywheel_forge_version = 0.6.11-13
 every_compat_forge=1.20-2.7.23
